# oneoffprojs

./: .gitignore  README.md
notes_tagger/: AGENTS.md  BACKLINKS_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  initial_plan.md  main.py  note_to_note_backlinks.md  pyproject.toml  tag_obsidian.sh
notes_tagger/cache/: topic_embeddings.pkl  topic_metadata.pkl
notes_tagger/examples/: basic_tagging.py  batch_tagging.py  obsidian_sync.py
notes_tagger/notes_tagger/: __init__.py  config.py  exceptions.py  models.py
notes_tagger/notes_tagger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
notes_tagger/notes_tagger/embeddings/: __init__.py  cache.py  model.py  utils.py
notes_tagger/notes_tagger/linker/: __init__.py  config.py  engine.py  similarity.py  store.py
notes_tagger/notes_tagger/storage/: __init__.py  cache.py  formats.py  obsidian.py
notes_tagger/notes_tagger/tagger/: __init__.py  engine.py  scoring.py
notes_tagger/notes_tagger_cli/: __init__.py  commands.py  main.py  utils.py
notes_tagger/test_notes/: golang_readme.md  statemachine.md  vorbereitung_examn.md
notes_tagger/test_notes/.notes_tagger/: embeddings.db
notes_tagger/tests/: __init__.py
notes_tagger/tests/fixtures/sample_notes/: budget_review.md  product_idea.md  research_notes.md  (+1 more)
notes_tagger/tests/integration/: __init__.py  test_end_to_end.py
notes_tagger/tests/unit/: __init__.py  test_embeddings.py  test_linker.py  test_models.py  test_storage.py  test_tagger.py
noteweaver/: .gitignore  deploy.sh  main.py  pyproject.toml
noteweaver/noteweaver/: __init__.py  logger.py  models.py  refine.py
noteweaver/noteweaver/cli/: app.py  client.py  config.py  display.py
noteweaver/noteweaver/server/: app.py  backup.py  config.py  db.py  indexer.py  routes.py  worker.py
reading_list/: PLAN.md  joy-and-curiosity-71  pyproject.toml
reading_list/reading_list.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
reading_list/readinglist/: extractor.py  formatter.py  main.py  newsletter.py  tagger.py
research_agent/: .gitignore  README.md  config.toml  main.py  pyproject.toml  research_agent_plan.md
research_agent/research_agent/: __main__.py  config.py  ollama_client.py  orchestrator.py  retrieval.py  storage.py  subagents.py
research_agent/service/: server.py
(+277 files in other folders)
