[project]
name = "reading-list"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.32.5",
    "trafilatura>=2.0.0",
    "sentence-transformers>=3.0.0",
]

[project.scripts]
reading-list = "readinglist.main:main"
