[project]
name = "research-agent"
version = "0.1.0"
description = "Research agent using Ollama"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama>=0.3.0",
    "typer>=0.12.0",
    "pydantic>=2.8.0",
    "githubkit>=0.10.0",
    "trafilatura>=1.8.1",
    "urlextract>=1.9.0",
    "pypdf>=4.2.0",
]

[project.scripts]
research-agent = "research_agent.__main__:main"
research-agent-server = "service.server:main"
